Demo was moved to separated dir

--- a/core-angular/demo/demo-index.html
+++ b/core-angular/demo/demo-index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Core Angular</title>
-    <script src="../node_modules/angular/angular.js"></script>
-    <script src="../Core.js"></script>
-    <script src="core-angular.js"></script>
+    <script src="../../node_modules/angular/angular.js"></script>
+    <script src="../../Core.js"></script>
+    <script src="../core-angular.js"></script>
     <script src="demo.js"></script>
 </head>
 <body ng-app="demoApp" ng-controller="MainController">
